<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/detailsPoster"
                android:transitionName="@string/poster_transition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_poster_w92"
                android:minWidth="92dp"
                android:minHeight="138dp"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                 />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/details_title_default"
                android:scrollHorizontally="false"
                android:id="@+id/detailsTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toRightOf="@+id/detailsPoster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detailsPoster"
                app:layout_constraintWidth_default="wrap"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                />

            <TextView
                android:id="@+id/detailsYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:text="@string/details_year_default"
                app:layout_constraintLeft_toLeftOf="@+id/detailsTitle"
                app:layout_constraintTop_toBottomOf="@+id/detailsTitle" />

            <TextView
                android:id="@+id/detailsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="@string/details_rating_default"
                app:layout_constraintLeft_toLeftOf="@+id/detailsTitle"
                app:layout_constraintTop_toBottomOf="@+id/detailsYear" />

            <Button
                android:id="@+id/addToFaforites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorites"
                app:layout_constraintLeft_toLeftOf="@id/detailsRating"
                app:layout_constraintTop_toBottomOf="@id/detailsRating"
                />

            <TextView
                android:id="@+id/detailsOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:text="@string/details_synopsis_default"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsPoster"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                />


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/normal_margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trailersLabel"
                tools:text="@string/trailers"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trailersRecycler">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/reviewsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/reviews"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviewsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noRewiewsTextView"
                    tools:text="@string/no_reviews_for_this_movie"
                    android:visibility="invisible"
                    />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
